--- a/mods/gra/rules/world.yaml
+++ b/mods/gra/rules/world.yaml
@@ -133,7 +133,12 @@
 		Name: Proles
 		InternalName: proles
 		Side: Soviet
-		Description: Proles: Commoners\nAnd some other weird stuff
+		Description: Proles: Heavy defense and weird stuff
+    Faction@8:
+		Name: IRA
+		InternalName: ira
+		Side: Allies
+		Description: IRA: Guerilla warfare and sneaky stuff
 	Faction@random:
 		Name: Any
 		InternalName: Random
@@ -149,7 +154,7 @@
 	Faction@randomsoviet:
 		Name: Soviet
 		InternalName: RandomSoviet
-		RandomFactionMembers: russia, ukraine
+		RandomFactionMembers: russia, ukraine, proles
 		Side: Random
 		Description: Random Soviet Country\nA random Soviet country will be chosen when the game starts.
 	ResourceType@ore:
@@ -223,12 +228,12 @@ World:
 	MPStartUnits@mcvonly:
 		Class: none
 		ClassName: MCV Only
-		Factions: allies, england, france, germany, soviet, russia, ukraine, proles
+		Factions: allies, england, france, germany, soviet, russia, ukraine, proles, ira
 		BaseActor: mcv
 	MPStartUnits@lightallies:
 		Class: light
 		ClassName: Light Support
-		Factions: allies, england, france, germany
+		Factions: allies, england, france, germany, ira
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,e3,e3,jeep,1tnk
 		InnerSupportRadius: 3
@@ -236,22 +241,15 @@ World:
 	MPStartUnits@lightsoviet:
 		Class: light
 		ClassName: Light Support
-		Factions: soviet, russia, ukraine
+		Factions: soviet, russia, ukraine, proles
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,e3,e3,apc,ftrk
-		InnerSupportRadius: 3
-		OuterSupportRadius: 5
-    MPStartUnits@lightproles:
-		Class: light
-		ClassName: proles
-		BaseActor: mcv
-		SupportActors:
 		InnerSupportRadius: 3
 		OuterSupportRadius: 5
 	MPStartUnits@heavyallies:
 		Class: heavy
 		ClassName: Heavy Support
-		Factions: allies, england, france, germany
+		Factions: allies, england, france, germany, ira
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,e3,e3,jeep,1tnk,2tnk,2tnk,2tnk
 		InnerSupportRadius: 3
@@ -259,16 +257,9 @@ World:
 	MPStartUnits@heavysoviet:
 		Class: heavy
 		ClassName: Heavy Support
-		Factions: soviet, russia, ukraine
+		Factions: soviet, russia, ukraine, proles
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,e3,e3,apc,ftrk,3tnk,3tnk
-		InnerSupportRadius: 3
-		OuterSupportRadius: 5
-    MPStartUnits@heavyproles:
-		Class: heavy
-		ClassName: proles
-		BaseActor: mcv
-		SupportActors:
 		InnerSupportRadius: 3
 		OuterSupportRadius: 5
 	MPStartLocations:
