--- a/mods/gra/mod.yaml
+++ b/mods/gra/mod.yaml
@@ -95,7 +95,7 @@ ChromeLayout:
 	common|chrome/ingame-menu.yaml
 	ra|chrome/ingame-observer.yaml
 	common|chrome/ingame-observerstats.yaml
-	ra|chrome/ingame-player.yaml
+	gra|chrome/ingame-player.yaml
 	common|chrome/ingame-perf.yaml
 	common|chrome/ingame-debug.yaml
 	common|chrome/ingame-infochat.yaml
