Add Isaiah as author
In order to push dos2unix change

--- a/mod.config
+++ b/mod.config
@@ -62,7 +62,7 @@ PACKAGING_FAQ_URL="http://wiki.openra.net/FAQ"
 # The human-readable project authors.
 # This is used in:
 #  - Windows "Add/Remove Programs" list
-PACKAGING_AUTHORS="Gabriel Frey"
+PACKAGING_AUTHORS="Gabriel Frey, Isaiah Frey"
 
 # The git tag to use for the macOS Launcher files.
 PACKAGING_OSX_LAUNCHER_TAG="osx-launcher-20171118"
