--- a/OpenRA.Mods.Gra/OpenRA.Mods.Gra.csproj
+++ b/OpenRA.Mods.Gra/OpenRA.Mods.Gra.csproj
@@ -50,6 +50,9 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Blank.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <MakeDir Directories="$(SolutionDir)mods/gra/" />
