Copied over files for formating

--- a/mod.config
+++ b/mod.config
@@ -24,7 +24,7 @@ TRAVIS_TEST_MOD="True"
 
 # Perform a dry run of the installer generation when a new commit is pushed to the GitHub repository
 # Accepts values "True" or "False".
-TRAVIS_TEST_PACKAGING="True"
+TRAVIS_TEST_PACKAGING="False"
 
 ##############################################################################
 # Packaging
@@ -62,7 +62,7 @@ PACKAGING_FAQ_URL="http://wiki.openra.net/FAQ"
 # The human-readable project authors.
 # This is used in:
 #  - Windows "Add/Remove Programs" list
-PACKAGING_AUTHORS="Gabriel Frey, Isaiah Frey"
+PACKAGING_AUTHORS="Gabriel Frey"
 
 # The git tag to use for the macOS Launcher files.
 PACKAGING_OSX_LAUNCHER_TAG="osx-launcher-20171118"
