Added custom file to GRA
Not sure if they overwrite common mods files, warnings come up saying conflicting files

--- a/OpenRA.Mods.Gra/OpenRA.Mods.Gra.csproj
+++ b/OpenRA.Mods.Gra/OpenRA.Mods.Gra.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Traits\Render\WithSpriteControlGroupDecoration.cs" />
     <Compile Include="Traits\Render\WithTextControlGroupDecoration.cs" />
+    <Compile Include="Traits\World\ValidateOrder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
