--- a/mods/gra/mod.yaml
+++ b/mods/gra/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: Geoff Red Alert
-	Version: 1
+	Version: playtest-20190106
 	Website: https://www.openra.net
 	WebIcon32: https://www.openra.net/images/icons/ra_32x32.png
 
